# soft-robotics-lab

./: .gitignore  Makefile  OMEGA_PROTOCOLS_WORDING.md  README.md  REPOSITORY_STRUCTURE.md  TSRFC_CREDIBILITY_SPEC.md  TSRFC_METHOD.md  TSRFC_README.md  file_list.txt  mac_tools_install.sh  package-lock.json  package.json  requirements.txt  tsconfig.json  vitest.config.ts
omega-f/: demo_components.py  index.html  package-lock.json  pyproject.toml  vite.config.ts
omega-f/core/: config.py
omega-f/determination/: generator.py  validator.py
omega-f/evidence/: boundary_detection.py  precedent_analyzer.py  risk_assessment.py  system_analysis.py
omega-f/integration/: constraint_assessor.py  orientation_assessor.py  spine_integration.py
omega-f/methodology/: index.html
omega-f/output/: api_interface.py  web_interface.py
omega-f/src/: entry-about.ts  entry-archive.ts  entry-contact.ts  entry-det-2026-01-plain.ts  entry-det-2026-01.ts  entry-determinations.ts
omega-f/src/data/: determinationTexts.ts
omega-f/src/pages/: audit.ts  determinationRender.ts  pdf.ts  plainText.ts
omega-f/src/partials/: chrome.ts
omega-f/src/styles/: site.css
omega-f/tests/: test_integration.py  test_public_interface.py
oplas/: BLOCK_03_SUMMARY.md  BLOCK_04_SUMMARY.md  BLOCK_05_SUMMARY.md  BLOCK_06_SUMMARY.md  BLOCK_07_SUMMARY.md  BLOCK_10_SUMMARY.md  BLOCK_11_SUMMARY.md  BLOCK_13_SUMMARY.md  BLOCK_15_SUMMARY.md  GATE_1A_SUMMARY.md  package.json  pyproject.toml
oplas/artifacts/: __init__.py
oplas/canonicalization/: canonicalizer.py
oplas/contracts/: __init__.py
oplas/core/: __init__.py  types.py
oplas/dsl/: __init__.py
oplas/execution/: __init__.py
oplas/fixtures/grids/: nested_containment.json  symmetry.json  two_separated.json
oplas/fixtures/programs/: 02_select_and_recolor.txt  04_paste_relative.txt  05_paste_absolute.txt  10_objset_literal.txt  14_chained_operations.txt  20_mixed_coords.txt
oplas/parser/: __init__.py  deterministic_parser.py  intent_classifier.py
oplas/scripts/: replay-task-orchestrator.ts  run-regression.ts
oplas/src/contracts/enums/: ArtifactKinds.ts  (+4 more)
oplas/src/core/: Parser.ts  Storage.ts
oplas/tests/: test_canonicalization.py  test_replay.py
spine/tsrfc/: cli.py  engine.py  models.py  pyproject.toml
spine/tsrfc/presets/: __init__.py
(+2348 files in other folders)
