[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tsrfc"
version = "0.1.0"
description = "Translational SRFC (procedures, failure surfaces, evidence vs adoption)"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
tsrfc = "tsrfc.cli:main"

[tool.setuptools]
packages = ["tsrfc"]






